--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "google/apiclient": "^2.19",
         "intervention/image": "^3.11",
+        "kreait/firebase-php": "^6.9",
         "laravel/cashier": "^16.1",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
